--- a/SmartLampSampleApp/res/values/strings.xml
+++ b/SmartLampSampleApp/res/values/strings.xml
@@ -6,5 +6,7 @@
     <string name="menu_settings">Settings</string>
     <string name="connecting">Connecting</string>
     <string name="control">Control</string>
+    <string name="title_activity_menu">Menu</string>
+    <string name="action_settings">Settings</string>
 
 </resources>
