--- a/SmartLampSample/res/values/strings.xml
+++ b/SmartLampSample/res/values/strings.xml
@@ -1,30 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">SmartLamp</string>
+  <string name="app_name">SmartLamp</string>
 
-    <string-array name="menu_items">
-        <item>Color Controller</item>
-        <item>Motion Controller</item>
-        <item>Music Visualizer</item>
-        <item>Notifier</item>
-    </string-array>
+  <string-array name="menu_items">
+    <item>Color Controller</item>
+    <item>Motion Controller</item>
+    <item>Music Visualizer</item>
+    <item>Notifier</item>
+  </string-array>
 
-    <string name="ns_menu_snippet1">Color Controller</string>
-    <string name="ns_menu_snippet2">Motion Controller</string>
-    <string name="ns_menu_snippet3">Music Visualizer</string>
-    <string name="ns_menu_snippet4">Notifier</string>
+  <string name="ns_menu_snippet1">Color Controller</string>
+  <string name="ns_menu_snippet2">Motion Controller</string>
+  <string name="ns_menu_snippet3">Music Visualizer</string>
+  <string name="ns_menu_snippet4">Notifier</string>
 
-    <string name="ns_menu_main_header">Base Functions</string>
-    <string name="ns_menu_main_header2">Features</string>
+  <string name="ns_menu_main_header">Base Functions</string>
+  <string name="ns_menu_main_header2">Features</string>
 
-    <string name="initial_text">Initial text.</string>
-    <string name="drawer_open">Open navigation drawer</string>
-    <string name="drawer_close">Close navigation drawer</string>
-    <string name="action_websearch">Web search</string>
-    <string name="app_not_available">Sorry, there\'s no web browser available</string>
-    <string name="action_settings">Settings</string>
-    <string name="hello_world">Hello world!</string>
-    <string name="title_activity_intro2">MainActivity</string>
+  <string name="initial_text">Initial text.</string>
+  <string name="drawer_open">Open navigation drawer</string>
+  <string name="drawer_close">Close navigation drawer</string>
+  <string name="action_websearch">Web search</string>
+  <string name="app_not_available">Sorry, there\'s no web browser available</string>
+  <string name="action_settings">Settings</string>
+  <string name="hello_world">Hello world!</string>
+  <string name="title_activity_intro2">MainActivity</string>
+  <string name="start">START</string>
+  <string name="stop">STOP</string>
+  <string name="pause">PAUSE</string>
+  <string name="playlist">PL</string>
 
 </resources>
